gcc/testsuite/rust/rustc/ui/deprecation/feature-gate-deprecated_suggestion.rs
//@ compile-flags: --crate-type=lib

#![no_implicit_prelude]

#[deprecated(suggestion = "foo")] // { dg-error "" "" { target *-*-* } }
struct Foo {}

